<resources>
    <string name="app_name">NotBored</string>
    <string name="title_app">Not Bored</string>
    <string name="start">Start</string>
    <string name="title_terms_and_condition">Terms and conditions</string>
    <string name="terms_and_condition"><u>Terms and condition</u></string>
    <string name="participants">Participants</string>
    <string name="key_participants">participants</string>
    <string name="random">Random</string>
    <string name="price">Price</string>
    <string name="try_another">Try another</string>
    <string name="free">Free</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="standard">Default</string>
    <string name="terms_condition_body">Lorem ipsum dolor sit amet consectetur adipiscing elit inceptos ridiculus iaculis, nullam ligula elementum duis tellus maecenas nec fermentum sed dictum laoreet, taciti donec habitant quam purus ultricies porta posuere sociis. Cubilia senectus netus integer tempor dignissim viverra nostra tellus scelerisque aliquet, semper penatibus tempus sociosqu class sociis bibendum justo etiam, rutrum aenean et eget pretium volutpat eu dictum dictumst \n \n.
Praesent gravida ridiculus cursus luctus maecenas in libero mi interdum, auctor ullamcorper eget nam eros condimentum litora tristique erat, fusce rhoncus mauris cras aptent non et ultricies. Iaculis porttitor etiam pulvinar proin fringilla ad, sem ornare sociosqu ultrices litora himenaeos egestas, eros laoreet mauris leo porta. Nibh interdum facilisis dapibus magnis phasellus tortor fusce nostra quam, ante non elementum himenaeos id hac et hendrerit eros, dui at sollicitudin turpis viverra molestie cras quis.
Dignissim faucibus auctor in vitae porttitor tellus nascetur tempor sociosqu, elementum dis ultricies eu tempus tincidunt lectus posuere, et ac interdum commodo montes convallis curae facilisis. \n \n Vitae diam phasellus litora ad aenean himenaeos, magnis malesuada nec metus faucibus, turpis mollis hac lacinia lacus. Condimentum dis in sed vel molestie integer, gravida eget volutpat interdum bibendum scelerisque magnis, penatibus non sollicitudin convallis egestas. Aptent mi ligula conubia justo habitant cubilia tellus curabitur, a nisi integer non eget vivamus cursus hac, lacus rutrum ridiculus tempor litora nostra dis.
Nisl pulvinar taciti tellus diam quam dictum cursus potenti euismod natoque feugiat mattis ornare tortor, aliquam orci dapibus inceptos id egestas ante viverra donec aptent suscipit nulla. \n \n Eget nisl fringilla cras felis maecenas nisi ridiculus id
 conubia hac primis sem ullamcorper porttitor, rutrum ac sodales ultrices vestibulum cum leo semper fusce porta eu fermentum. Proin nisi suspendisse class facilisi curabitur quisque, fusce vulputate semper a nulla velit, duis in orci faucibus turpis. Risus metus magnis aliquam accumsan laoreet congue per, tempus purus et odio senectus sodales vulputate, ligula malesuada dis habitasse nullam pellentesque.</string>
    <string name="activities">Activities</string>
    <string name="accept_terms_and_conditions">I accept terms and conditions</string>
    <string name="error_connection">No internet connection.. Try again later.</string>
    <string name="error_participants">No task for selected number of participants.</string>
    <string name="you_accept_terms_and_conditions">The terms and conditions are accepted…</string>
    <string name="category">Category</string>
    <string name="back">Back..</string>
    <string name="value_free">price=0.0</string>
    <string name="value_low"><![CDATA[minprice=0.1&maxprice=0.3]]></string>
    <string name="value_medium"><![CDATA[minprice=0.4&maxprice=0.6]]></string>
    <string name="value_high"><![CDATA[minprice=0.7&maxprice=1.0]]></string>

    <string-array name="prices">
        <item>Selected price:</item>
        <item>Free</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
</resources>