<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundView"
    tools:context=".TermConditionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/ibClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:drawable/ic_delete" />

        <TextView
            android:id="@+id/tvTitleTermsAndCondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_terms_and_condition"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ibClose"
            tools:textSize="20sp" />

        <TextView
            android:id="@+id/tvTitleNotBored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/title_app"
            android:textColor="@color/titleApp"
            android:textSize="40sp"
            android:textStyle="bold"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvTyC"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleTermsAndCondition"
            tools:textSize="40sp" />

        <TextView
            android:id="@+id/tvTyC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textStyle="bold"
            android:text="@string/terms_condition_body"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleNotBored"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/terms_condition_body"/>

        <CheckBox
            android:id="@+id/cbTermsAndCondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/accept_terms_and_conditions"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTyC" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>